--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>Welcome to Your Website</h1>
-    <p>This is a placeholder for your content.</p>
+    <h1>Welcome to the demo site for my chatbot</h1>
+    <p>This is a bot built for Property Couch - a property investment podcast and advisory firm</p>
 
     <!-- Placeholder for <script> tag -->
     <script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
